--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	     <h1>Roblox</h1>
 		 <p>Get to know me!</p>
 		 <a href="games.html">Roblox, my favorite game</a>
+	     <br>
+	     	<a href="subjects.html">my favorite subjects!</a>
 	 	 
 	 </body>
 </html>
